# Food-Recommendation-System

./: CMakeLists.txt  Database.sql
cmake/: Findmysqlcppconn.cmake
include/: Client.h  DatabaseConnection.h  Server.h
include/DAO/: FeedbackDAO.h  FoodItemDAO.h  FoodItemTypesDAO.h  LoginDAO.h  MenuDAO.h  MenuItemDAO.h  MenuTypeDAO.h  NotificationDAO.h  PreferenceDAO.h  RoleDAO.h  ScheduledMenuDAO.h  UserDAO.h
include/DTO/: Feedback.h  FoodItem.h  FoodItemTypes.h  Login.h  Menu.h  MenuItem.h  MenuType.h  Notification.h  Preference.h  Role.h  ScheduledMenu.h  User.h
include/service/: LoginService.h  UserService.h
src/: Client.cpp  DatabaseConnection.cpp  Main.cpp  Server.cpp
src/DAO/: FeedbackDAO.cpp  FoodItemDAO.cpp  FoodItemTypesDAO.cpp  LoginDAO.cpp  MenuDAO.cpp  MenuItemDAO.cpp  MenuTypeDAO.cpp  NotificationDAO.cpp  PreferenceDAO.cpp  RoleDAO.cpp  ScheduledMenuDAO.cpp  UserDAO.cpp
src/service/: LoginService.cpp  UserService.cpp
